This commit was manufactured by cvs2svn to create tag 'V_1_8'.